--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,7 @@
+/* @import url('https://fonts.googleapis.com/css2?family=Caveat:wght@500&family=Libre+Baskerville:wght@400;700&family=Yantramanav:wght@500&display=swap'); */
+/* @import url('https://fonts.googleapis.com/css2?family=Caveat:wght@500&family=Fredoka+One&family=Libre+Baskerville:wght@400;700&family=Yantramanav:wght@500&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@500&family=Fredoka+One&family=Libre+Baskerville:wght@400;700&family=Work+Sans&family=Yantramanav:wght@500&display=swap');
+
 /* .App {
   text-align: center;
 }
